
2012-02-22  6.7.5-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Re-added the Iterative Distance function in morphology (as apposed to the
    faster more direct 2-pass Distance Function that replaced it) so it can be
    used in the special situation of  Constrainted Distance Morphology.
    http://www.imagemagick.org/discourse-server/viewtopic.php??f=2&t=18032

2012-02-13  6.7.5-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-6, SVN revision 6851.

2012-02-13  6.7.5-6 Cristy  <quetzlzacatenango@image...>
  * Only set PDF & PS page size when explicitedly requested (e.g. -page).

2012-02-12  6.7.5-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-5, SVN revision 6840.

2012-02-12  6.7.5-5 Cristy  <quetzlzacatenango@image...>
  * Only use the canvas size of the very first frame of a GIF image sequence.

2012-02-11  6.7.5-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-4, SVN revision 6824.

2012-02-08  6.7.5-4 Cristy  <quetzlzacatenango@image...>
  * Set image alpha channel for -virtual-pixel background and transparent.
  * Get tiff:fill-order as an image artifact, not an image option.

2012-02-06  6.7.5-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-3, SVN revision 6732.

2012-02-06  6.7.5-3 Cristy  <quetzlzacatenango@image...>
  * TIFF no longer writes the incorrect fill order.

2012-02-05  6.7.5-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-2, SVN revision 6718.

2012-02-03  6.7.5-2 Cristy  <quetzlzacatenango@image...>
  * Add SyncImagePixelCache() to ensure cache morphology is consistent.
  * Patch so two -colorspace options return correct results for rowund-trip.

2012-02-02  6.7.5-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-1, SVN revision 6684.

2012-01-30  6.7.5-1 Cristy  <quetzlzacatenango@image...>
  * Support the -alpha remove option (use it to remove transparency from PDF,
    convert -density 200 apple.pdf -alpha remove x:).