@@ -1,3 +1,8 @@
+2012-02-25  6.7.5-7 Cristy  <quetzlzacatenango@image...>
+  * New version 6.7.5-6, SVN revision 6962.
+
+2012-02-23  6.7.5-7 Cristy  <quetzlzacatenango@image...>
+  * Add support for the EMFPlus delegate program.
 
 2012-02-22  6.7.5-7 Anthony Thyssen <A.Thyssen@griffith...>
   * Re-added the Iterative Distance function in morphology (as apposed to the
